--- a/package.json
+++ b/package.json
@@ -20,42 +20,44 @@
     "build:linux": "electron-vite build && electron-builder --linux --config"
   },
   "dependencies": {
-    "@electron-toolkit/preload": "^1.0.2",
+    "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
     "@fluentui/react-icons": "^2.0.190",
     "@tippyjs/react": "^4.2.6",
     "electron-updater": "^5.3.0",
     "i": "^0.3.7",
     "install": "^0.13.0",
-    "react-router-dom": "^6.5.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-router-dom": "^6.6.1",
     "tippy.js": "^6.3.7",
-    "zustand": "^4.1.5"
+    "zustand": "^4.2.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.3",
     "@heroicons/react": "^2.0.13",
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "@vitejs/plugin-react": "^3.0.1",
     "autoprefixer": "^10.4.13",
     "electron": "^22.0.0",
     "electron-builder": "^23.6.0",
-    "electron-vite": "^1.0.16",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
+    "electron-vite": "^1.0.17",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
-    "vite": "^4.0.2"
+    "vite": "^4.0.4"
   },
   "pnpm": {
     "overrides": {
